# pyWINDMI

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: README.md
examples/: case_1_constant_daily_ic.py  case_1_constant_params_daily_ic.py  case_2_constant_params_rolling_ic.py  case_2_constant_rolling_ic.py  case_3_variable_params_rolling_ic.py  case_3_variable_rolling_ic.py  minimal_run.py  run_windmi.py  windmi_pub.ipynb
src/: __init__.py  bootstrap.py  cases.py  coupling.py  data.py  derived.py  io.py  model.py  params.py  plotting.py  preprocess.py  triggers.py
src/windmi/: coupling.py  derived.py  io.py  model.py  params.py  preprocess.py
src/windmi_pub/: __init__.py  cases.py  data.py  model.py  plotting.py
tests/: test_solver_smoke.py  test_switch.py
